// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessListChildTable test error in query 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="pf-c-page__main-section pf-m-light"
      >
        <div
          class="pf-l-bullseye"
          data-ouia-component-type="server-errors"
          data-ouia-safe="true"
        >
          <div
            class="pf-c-empty-state"
          >
            <div
              class="pf-c-empty-state__content"
            >
              <svg
                aria-hidden="true"
                class="pf-c-empty-state__icon"
                fill="var(--pf-global--danger-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
              <h1
                class="pf-c-title pf-m-4xl"
                data-ouia-component-id="OUIA-Generated-Title-2"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe="true"
              >
                Error fetching data
              </h1>
              <div
                class="pf-c-empty-state__body"
                data-testid="empty-state-body"
              >
                An error occurred while accessing data.
                 
                <button
                  aria-disabled="false"
                  class="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-7"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  data-testid="display-error"
                  id="display-error"
                  type="button"
                >
                  See more details
                </button>
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="pf-c-page__main-section pf-m-light"
    >
      <div
        class="pf-l-bullseye"
        data-ouia-component-type="server-errors"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-empty-state"
        >
          <div
            class="pf-c-empty-state__content"
          >
            <svg
              aria-hidden="true"
              class="pf-c-empty-state__icon"
              fill="var(--pf-global--danger-color--100)"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              />
            </svg>
            <h1
              class="pf-c-title pf-m-4xl"
              data-ouia-component-id="OUIA-Generated-Title-2"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              Error fetching data
            </h1>
            <div
              class="pf-c-empty-state__body"
              data-testid="empty-state-body"
            >
              An error occurred while accessing data.
               
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-7"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="display-error"
                id="display-error"
                type="button"
              >
                See more details
              </button>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProcessListChildTable test no results found 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="pf-l-bullseye"
        data-ouia-component-type="kogito-empty-state"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-empty-state"
        >
          <div
            class="pf-c-empty-state__content"
          >
            <svg
              aria-hidden="true"
              class="pf-c-empty-state__icon"
              fill="var(--pf-global--info-color--100)"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              />
            </svg>
            <h5
              class="pf-c-title pf-m-lg"
              data-ouia-component-id="OUIA-Generated-Title-4"
              data-ouia-component-type="PF4/Title"
              data-ouia-safe="true"
            >
              No child workflow instances
            </h5>
            <div
              class="pf-c-empty-state__body"
            >
              This workflow has no related sub workflows
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="pf-l-bullseye"
      data-ouia-component-type="kogito-empty-state"
      data-ouia-safe="true"
    >
      <div
        class="pf-c-empty-state"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="var(--pf-global--info-color--100)"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            />
          </svg>
          <h5
            class="pf-c-title pf-m-lg"
            data-ouia-component-id="OUIA-Generated-Title-4"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            No child workflow instances
          </h5>
          <div
            class="pf-c-empty-state__body"
          >
            This workflow has no related sub workflows
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProcessListChildTable test render table 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <table
        aria-label="Process List Child Table"
        class="kogito-management-console__compact-table pf-c-table pf-m-grid-md pf-m-compact"
        data-ouia-component-id="OUIA-Generated-Table-4"
        data-ouia-component-type="process-list-child-table"
        data-ouia-safe="true"
        role="grid"
      >
        <thead
          class=""
        >
          <tr
            class=""
            data-ouia-component-id="OUIA-Generated-TableRow-2"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <th
              class=""
              data-key="0"
              data-label=""
            />
            <th
              class=""
              data-key="1"
              data-label="Id"
              scope="col"
            >
              Id
            </th>
            <th
              class=""
              data-key="2"
              data-label="Status"
              scope="col"
            >
              Status
            </th>
            <th
              class=""
              data-key="3"
              data-label="Created"
              scope="col"
            >
              Created
            </th>
            <th
              class=""
              data-key="4"
              data-label="Last update"
              scope="col"
            >
              Last update
            </th>
            <th
              class=""
              data-key="5"
              data-label=""
            />
          </tr>
        </thead>
        <tbody
          class=""
          role="rowgroup"
        >
          <tr
            class=""
            data-ouia-component-id="OUIA-Generated-TableRow-3"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <td
              class=""
              data-key="0"
              data-ouia-component-id="__select"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-check pf-m-standalone"
              >
                <input
                  aria-invalid="false"
                  aria-label="process-list-checkbox"
                  class="pf-c-check__input"
                  data-ouia-component-id="OUIA-Generated-Checkbox-1"
                  data-ouia-component-type="PF4/Checkbox"
                  data-ouia-safe="true"
                  data-testid="checkbox-538f9feb-5a14-4096-b791-2055b38da7c6"
                  id="checkbox-538f9feb-5a14-4096-b791-2055b38da7c6"
                  name="checkbox-538f9feb-5a14-4096-b791-2055b38da7c6"
                  type="checkbox"
                />
              </div>
            </td>
            <td
              class=""
              data-key="1"
              data-label="Id"
              data-ouia-component-id="id"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <a
                class="kogito-process-list__link"
                data-ouia-component-type="process-description"
                data-ouia-safe="true"
              >
                <strong>
                  <span>
                    travels
                     
                    <span
                      class="pf-c-badge pf-m-unread"
                    >
                      Tra234
                    </span>
                  </span>
                  <div
                    id="kogito-consoles-tooltip-538f9feb-5a14-4096-b791-2055b38da7c6-0.123456789"
                  />
                </strong>
              </a>
              <a
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                href="http://localhost:4000"
                target="_blank"
              >
                Endpoint
                <svg
                  aria-hidden="true"
                  class="pf-u-ml-xs"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                  />
                </svg>
              </a>
            </td>
            <td
              class=""
              data-key="2"
              data-label="Status"
              data-ouia-component-id="status"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="error-state"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="pf-u-mr-sm"
                  fill="var(--pf-global--danger-color--100)"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M409.5,319 C406.699326,316.168774 402.882413,314.575614 398.9,314.575614 C394.917587,314.575614 391.100674,316.168774 388.3,319 L319,388.3 C316.168774,391.100674 314.575614,394.917587 314.575614,398.9 C314.575614,402.882413 316.168774,406.699326 319,409.5 L421.5,512 L319,614.5 C316.168774,617.300674 314.575614,621.117587 314.575614,625.1 C314.575614,629.082413 316.168774,632.899326 319,635.7 L388.3,705 C391.100674,707.831226 394.917587,709.424386 398.9,709.424386 C402.882413,709.424386 406.699326,707.831226 409.5,705 L512,602.5 L614.5,705 C620.367618,710.877435 629.877455,710.922082 635.8,705.1 L705.1,635.8 C707.926508,632.970191 709.505822,629.128746 709.48721,625.129169 C709.468267,621.129592 707.852954,617.303145 705,614.5 L602.5,512 L705,409.5 C707.821142,406.720523 709.417879,402.93109 709.436648,398.97079 C709.455417,395.01049 707.89467,391.206092 705.1,388.4 L635.8,319 C629.932382,313.122565 620.422545,313.077918 614.5,318.9 L512,421.5 L409.5,319 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z"
                  />
                </svg>
                Error
              </button>
            </td>
            <td
              class=""
              data-key="3"
              data-label="Created"
              data-ouia-component-id="created"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <time
                datetime="1571715644000"
              >
                8 months ago
              </time>
            </td>
            <td
              class=""
              data-key="4"
              data-label="Last update"
              data-ouia-component-id="last update"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <span>
                 
                <svg
                  aria-hidden="true"
                  class="pf-u-mr-sm"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 255.531c.253 136.64-111.18 248.372-247.82 248.468-59.015.042-113.223-20.53-155.822-54.911-11.077-8.94-11.905-25.541-1.839-35.607l11.267-11.267c8.609-8.609 22.353-9.551 31.891-1.984C173.062 425.135 212.781 440 256 440c101.705 0 184-82.311 184-184 0-101.705-82.311-184-184-184-48.814 0-93.149 18.969-126.068 49.932l50.754 50.754c10.08 10.08 2.941 27.314-11.313 27.314H24c-8.837 0-16-7.163-16-16V38.627c0-14.254 17.234-21.393 27.314-11.314l49.372 49.372C129.209 34.136 189.552 8 256 8c136.81 0 247.747 110.78 248 247.531zm-180.912 78.784l9.823-12.63c8.138-10.463 6.253-25.542-4.21-33.679L288 256.349V152c0-13.255-10.745-24-24-24h-16c-13.255 0-24 10.745-24 24v135.651l65.409 50.874c10.463 8.137 25.541 6.253 33.679-4.21z"
                  />
                </svg>
                 Updated
                 
                <time
                  datetime="1571715644000"
                >
                  8 months ago
                </time>
              </span>
            </td>
            <td
              class=""
              data-key="5"
              data-ouia-component-id="__actions"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <div
                aria-label="process instance actions dropdown"
                aria-labelledby="process instance actions dropdown"
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-1"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  data-testid="kebab-toggle"
                  id="kebab-toggle"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class=""
            data-ouia-component-id="OUIA-Generated-TableRow-4"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <td
              class=""
              data-key="0"
              data-ouia-component-id="__select"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-check pf-m-standalone"
              >
                <input
                  aria-invalid="false"
                  aria-label="process-list-checkbox"
                  class="pf-c-check__input"
                  data-ouia-component-id="OUIA-Generated-Checkbox-2"
                  data-ouia-component-type="PF4/Checkbox"
                  data-ouia-safe="true"
                  data-testid="checkbox-538f9feb-5a14-4096-b791-2055b38da7c69"
                  id="checkbox-538f9feb-5a14-4096-b791-2055b38da7c69"
                  name="checkbox-538f9feb-5a14-4096-b791-2055b38da7c69"
                  type="checkbox"
                />
              </div>
            </td>
            <td
              class=""
              data-key="1"
              data-label="Id"
              data-ouia-component-id="id"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <a
                class="kogito-process-list__link"
                data-ouia-component-type="process-description"
                data-ouia-safe="true"
              >
                <strong>
                  <span>
                    travels
                     
                    <span
                      class="pf-c-badge pf-m-unread"
                    >
                      Tra234
                    </span>
                  </span>
                  <div
                    id="kogito-consoles-tooltip-538f9feb-5a14-4096-b791-2055b38da7c69-0.123456789"
                  />
                </strong>
              </a>
              <a
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-3"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                href="http://localhost:4000"
                target="_blank"
              >
                Endpoint
                <svg
                  aria-hidden="true"
                  class="pf-u-ml-xs"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                  />
                </svg>
              </a>
            </td>
            <td
              class=""
              data-key="2"
              data-label="Status"
              data-ouia-component-id="status"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-4"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="error-state"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="pf-u-mr-sm"
                  fill="var(--pf-global--danger-color--100)"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M409.5,319 C406.699326,316.168774 402.882413,314.575614 398.9,314.575614 C394.917587,314.575614 391.100674,316.168774 388.3,319 L319,388.3 C316.168774,391.100674 314.575614,394.917587 314.575614,398.9 C314.575614,402.882413 316.168774,406.699326 319,409.5 L421.5,512 L319,614.5 C316.168774,617.300674 314.575614,621.117587 314.575614,625.1 C314.575614,629.082413 316.168774,632.899326 319,635.7 L388.3,705 C391.100674,707.831226 394.917587,709.424386 398.9,709.424386 C402.882413,709.424386 406.699326,707.831226 409.5,705 L512,602.5 L614.5,705 C620.367618,710.877435 629.877455,710.922082 635.8,705.1 L705.1,635.8 C707.926508,632.970191 709.505822,629.128746 709.48721,625.129169 C709.468267,621.129592 707.852954,617.303145 705,614.5 L602.5,512 L705,409.5 C707.821142,406.720523 709.417879,402.93109 709.436648,398.97079 C709.455417,395.01049 707.89467,391.206092 705.1,388.4 L635.8,319 C629.932382,313.122565 620.422545,313.077918 614.5,318.9 L512,421.5 L409.5,319 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z"
                  />
                </svg>
                Error
              </button>
            </td>
            <td
              class=""
              data-key="3"
              data-label="Created"
              data-ouia-component-id="created"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <time
                datetime="1571715644000"
              >
                8 months ago
              </time>
            </td>
            <td
              class=""
              data-key="4"
              data-label="Last update"
              data-ouia-component-id="last update"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <span>
                 
                <svg
                  aria-hidden="true"
                  class="pf-u-mr-sm"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 255.531c.253 136.64-111.18 248.372-247.82 248.468-59.015.042-113.223-20.53-155.822-54.911-11.077-8.94-11.905-25.541-1.839-35.607l11.267-11.267c8.609-8.609 22.353-9.551 31.891-1.984C173.062 425.135 212.781 440 256 440c101.705 0 184-82.311 184-184 0-101.705-82.311-184-184-184-48.814 0-93.149 18.969-126.068 49.932l50.754 50.754c10.08 10.08 2.941 27.314-11.313 27.314H24c-8.837 0-16-7.163-16-16V38.627c0-14.254 17.234-21.393 27.314-11.314l49.372 49.372C129.209 34.136 189.552 8 256 8c136.81 0 247.747 110.78 248 247.531zm-180.912 78.784l9.823-12.63c8.138-10.463 6.253-25.542-4.21-33.679L288 256.349V152c0-13.255-10.745-24-24-24h-16c-13.255 0-24 10.745-24 24v135.651l65.409 50.874c10.463 8.137 25.541 6.253 33.679-4.21z"
                  />
                </svg>
                 Updated
                 
                <time
                  datetime="1571715644000"
                >
                  8 months ago
                </time>
              </span>
            </td>
            <td
              class=""
              data-key="5"
              data-ouia-component-id="__actions"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <div
                aria-label="process instance actions dropdown"
                aria-labelledby="process instance actions dropdown"
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-2"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  data-testid="kebab-toggle"
                  id="kebab-toggle"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </td>
          </tr>
          <tr
            class=""
            data-ouia-component-id="OUIA-Generated-TableRow-5"
            data-ouia-component-type="PF4/TableRow"
            data-ouia-safe="true"
          >
            <td
              class=""
              data-key="0"
              data-ouia-component-id="__select"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-check pf-m-standalone"
              >
                <input
                  aria-invalid="false"
                  aria-label="process-list-checkbox"
                  class="pf-c-check__input"
                  data-ouia-component-id="OUIA-Generated-Checkbox-3"
                  data-ouia-component-type="PF4/Checkbox"
                  data-ouia-safe="true"
                  data-testid="checkbox-e4448857-fa0c-403b-ad69-f0a353458b9d"
                  id="checkbox-e4448857-fa0c-403b-ad69-f0a353458b9d"
                  name="checkbox-e4448857-fa0c-403b-ad69-f0a353458b9d"
                  type="checkbox"
                />
              </div>
            </td>
            <td
              class=""
              data-key="1"
              data-label="Id"
              data-ouia-component-id="id"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <a
                class="kogito-process-list__link"
                data-ouia-component-type="process-description"
                data-ouia-safe="true"
              >
                <strong>
                  <span>
                    travels
                     
                    <span
                      class="pf-c-badge pf-m-unread"
                    >
                      Tra234
                    </span>
                  </span>
                  <div
                    id="kogito-consoles-tooltip-e4448857-fa0c-403b-ad69-f0a353458b9d-0.123456789"
                  />
                </strong>
              </a>
              <a
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-5"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                href="http://localhost:4000"
                target="_blank"
              >
                Endpoint
                <svg
                  aria-hidden="true"
                  class="pf-u-ml-xs"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                  />
                </svg>
              </a>
            </td>
            <td
              class=""
              data-key="2"
              data-label="Status"
              data-ouia-component-id="status"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-6"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="error-state"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="pf-u-mr-sm"
                  fill="var(--pf-global--danger-color--100)"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 1024 1024"
                  width="1em"
                >
                  <path
                    d="M409.5,319 C406.699326,316.168774 402.882413,314.575614 398.9,314.575614 C394.917587,314.575614 391.100674,316.168774 388.3,319 L319,388.3 C316.168774,391.100674 314.575614,394.917587 314.575614,398.9 C314.575614,402.882413 316.168774,406.699326 319,409.5 L421.5,512 L319,614.5 C316.168774,617.300674 314.575614,621.117587 314.575614,625.1 C314.575614,629.082413 316.168774,632.899326 319,635.7 L388.3,705 C391.100674,707.831226 394.917587,709.424386 398.9,709.424386 C402.882413,709.424386 406.699326,707.831226 409.5,705 L512,602.5 L614.5,705 C620.367618,710.877435 629.877455,710.922082 635.8,705.1 L705.1,635.8 C707.926508,632.970191 709.505822,629.128746 709.48721,625.129169 C709.468267,621.129592 707.852954,617.303145 705,614.5 L602.5,512 L705,409.5 C707.821142,406.720523 709.417879,402.93109 709.436648,398.97079 C709.455417,395.01049 707.89467,391.206092 705.1,388.4 L635.8,319 C629.932382,313.122565 620.422545,313.077918 614.5,318.9 L512,421.5 L409.5,319 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z"
                  />
                </svg>
                Error
              </button>
            </td>
            <td
              class=""
              data-key="3"
              data-label="Created"
              data-ouia-component-id="created"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <time
                datetime="1571715644000"
              >
                8 months ago
              </time>
            </td>
            <td
              class=""
              data-key="4"
              data-label="Last update"
              data-ouia-component-id="last update"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <span>
                 
                <svg
                  aria-hidden="true"
                  class="pf-u-mr-sm"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 255.531c.253 136.64-111.18 248.372-247.82 248.468-59.015.042-113.223-20.53-155.822-54.911-11.077-8.94-11.905-25.541-1.839-35.607l11.267-11.267c8.609-8.609 22.353-9.551 31.891-1.984C173.062 425.135 212.781 440 256 440c101.705 0 184-82.311 184-184 0-101.705-82.311-184-184-184-48.814 0-93.149 18.969-126.068 49.932l50.754 50.754c10.08 10.08 2.941 27.314-11.313 27.314H24c-8.837 0-16-7.163-16-16V38.627c0-14.254 17.234-21.393 27.314-11.314l49.372 49.372C129.209 34.136 189.552 8 256 8c136.81 0 247.747 110.78 248 247.531zm-180.912 78.784l9.823-12.63c8.138-10.463 6.253-25.542-4.21-33.679L288 256.349V152c0-13.255-10.745-24-24-24h-16c-13.255 0-24 10.745-24 24v135.651l65.409 50.874c10.463 8.137 25.541 6.253 33.679-4.21z"
                  />
                </svg>
                 Updated
                 
                <time
                  datetime="1571715644000"
                >
                  8 months ago
                </time>
              </span>
            </td>
            <td
              class=""
              data-key="5"
              data-ouia-component-id="__actions"
              data-ouia-component-type="process-list-cell"
              data-ouia-safe="true"
            >
              <div
                aria-label="process instance actions dropdown"
                aria-labelledby="process instance actions dropdown"
                class="pf-c-dropdown pf-m-align-right"
                data-ouia-component-id="OUIA-Generated-Dropdown-3"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Actions"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  data-testid="kebab-toggle"
                  id="kebab-toggle"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 192 512"
                    width="1em"
                  >
                    <path
                      d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                    />
                  </svg>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </body>,
  "container": <div>
    <table
      aria-label="Process List Child Table"
      class="kogito-management-console__compact-table pf-c-table pf-m-grid-md pf-m-compact"
      data-ouia-component-id="OUIA-Generated-Table-4"
      data-ouia-component-type="process-list-child-table"
      data-ouia-safe="true"
      role="grid"
    >
      <thead
        class=""
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-2"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <th
            class=""
            data-key="0"
            data-label=""
          />
          <th
            class=""
            data-key="1"
            data-label="Id"
            scope="col"
          >
            Id
          </th>
          <th
            class=""
            data-key="2"
            data-label="Status"
            scope="col"
          >
            Status
          </th>
          <th
            class=""
            data-key="3"
            data-label="Created"
            scope="col"
          >
            Created
          </th>
          <th
            class=""
            data-key="4"
            data-label="Last update"
            scope="col"
          >
            Last update
          </th>
          <th
            class=""
            data-key="5"
            data-label=""
          />
        </tr>
      </thead>
      <tbody
        class=""
        role="rowgroup"
      >
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-3"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            data-key="0"
            data-ouia-component-id="__select"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <div
              class="pf-c-check pf-m-standalone"
            >
              <input
                aria-invalid="false"
                aria-label="process-list-checkbox"
                class="pf-c-check__input"
                data-ouia-component-id="OUIA-Generated-Checkbox-1"
                data-ouia-component-type="PF4/Checkbox"
                data-ouia-safe="true"
                data-testid="checkbox-538f9feb-5a14-4096-b791-2055b38da7c6"
                id="checkbox-538f9feb-5a14-4096-b791-2055b38da7c6"
                name="checkbox-538f9feb-5a14-4096-b791-2055b38da7c6"
                type="checkbox"
              />
            </div>
          </td>
          <td
            class=""
            data-key="1"
            data-label="Id"
            data-ouia-component-id="id"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <a
              class="kogito-process-list__link"
              data-ouia-component-type="process-description"
              data-ouia-safe="true"
            >
              <strong>
                <span>
                  travels
                   
                  <span
                    class="pf-c-badge pf-m-unread"
                  >
                    Tra234
                  </span>
                </span>
                <div
                  id="kogito-consoles-tooltip-538f9feb-5a14-4096-b791-2055b38da7c6-0.123456789"
                />
              </strong>
            </a>
            <a
              aria-disabled="false"
              class="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id="OUIA-Generated-Button-link-1"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              href="http://localhost:4000"
              target="_blank"
            >
              Endpoint
              <svg
                aria-hidden="true"
                class="pf-u-ml-xs"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                />
              </svg>
            </a>
          </td>
          <td
            class=""
            data-key="2"
            data-label="Status"
            data-ouia-component-id="status"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id="OUIA-Generated-Button-link-2"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="error-state"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-u-mr-sm"
                fill="var(--pf-global--danger-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M409.5,319 C406.699326,316.168774 402.882413,314.575614 398.9,314.575614 C394.917587,314.575614 391.100674,316.168774 388.3,319 L319,388.3 C316.168774,391.100674 314.575614,394.917587 314.575614,398.9 C314.575614,402.882413 316.168774,406.699326 319,409.5 L421.5,512 L319,614.5 C316.168774,617.300674 314.575614,621.117587 314.575614,625.1 C314.575614,629.082413 316.168774,632.899326 319,635.7 L388.3,705 C391.100674,707.831226 394.917587,709.424386 398.9,709.424386 C402.882413,709.424386 406.699326,707.831226 409.5,705 L512,602.5 L614.5,705 C620.367618,710.877435 629.877455,710.922082 635.8,705.1 L705.1,635.8 C707.926508,632.970191 709.505822,629.128746 709.48721,625.129169 C709.468267,621.129592 707.852954,617.303145 705,614.5 L602.5,512 L705,409.5 C707.821142,406.720523 709.417879,402.93109 709.436648,398.97079 C709.455417,395.01049 707.89467,391.206092 705.1,388.4 L635.8,319 C629.932382,313.122565 620.422545,313.077918 614.5,318.9 L512,421.5 L409.5,319 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z"
                />
              </svg>
              Error
            </button>
          </td>
          <td
            class=""
            data-key="3"
            data-label="Created"
            data-ouia-component-id="created"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <time
              datetime="1571715644000"
            >
              8 months ago
            </time>
          </td>
          <td
            class=""
            data-key="4"
            data-label="Last update"
            data-ouia-component-id="last update"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <span>
               
              <svg
                aria-hidden="true"
                class="pf-u-mr-sm"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 255.531c.253 136.64-111.18 248.372-247.82 248.468-59.015.042-113.223-20.53-155.822-54.911-11.077-8.94-11.905-25.541-1.839-35.607l11.267-11.267c8.609-8.609 22.353-9.551 31.891-1.984C173.062 425.135 212.781 440 256 440c101.705 0 184-82.311 184-184 0-101.705-82.311-184-184-184-48.814 0-93.149 18.969-126.068 49.932l50.754 50.754c10.08 10.08 2.941 27.314-11.313 27.314H24c-8.837 0-16-7.163-16-16V38.627c0-14.254 17.234-21.393 27.314-11.314l49.372 49.372C129.209 34.136 189.552 8 256 8c136.81 0 247.747 110.78 248 247.531zm-180.912 78.784l9.823-12.63c8.138-10.463 6.253-25.542-4.21-33.679L288 256.349V152c0-13.255-10.745-24-24-24h-16c-13.255 0-24 10.745-24 24v135.651l65.409 50.874c10.463 8.137 25.541 6.253 33.679-4.21z"
                />
              </svg>
               Updated
               
              <time
                datetime="1571715644000"
              >
                8 months ago
              </time>
            </span>
          </td>
          <td
            class=""
            data-key="5"
            data-ouia-component-id="__actions"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <div
              aria-label="process instance actions dropdown"
              aria-labelledby="process instance actions dropdown"
              class="pf-c-dropdown pf-m-align-right"
              data-ouia-component-id="OUIA-Generated-Dropdown-1"
              data-ouia-component-type="PF4/Dropdown"
              data-ouia-safe="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Actions"
                class="pf-c-dropdown__toggle pf-m-plain"
                data-testid="kebab-toggle"
                id="kebab-toggle"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 192 512"
                  width="1em"
                >
                  <path
                    d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-4"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            data-key="0"
            data-ouia-component-id="__select"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <div
              class="pf-c-check pf-m-standalone"
            >
              <input
                aria-invalid="false"
                aria-label="process-list-checkbox"
                class="pf-c-check__input"
                data-ouia-component-id="OUIA-Generated-Checkbox-2"
                data-ouia-component-type="PF4/Checkbox"
                data-ouia-safe="true"
                data-testid="checkbox-538f9feb-5a14-4096-b791-2055b38da7c69"
                id="checkbox-538f9feb-5a14-4096-b791-2055b38da7c69"
                name="checkbox-538f9feb-5a14-4096-b791-2055b38da7c69"
                type="checkbox"
              />
            </div>
          </td>
          <td
            class=""
            data-key="1"
            data-label="Id"
            data-ouia-component-id="id"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <a
              class="kogito-process-list__link"
              data-ouia-component-type="process-description"
              data-ouia-safe="true"
            >
              <strong>
                <span>
                  travels
                   
                  <span
                    class="pf-c-badge pf-m-unread"
                  >
                    Tra234
                  </span>
                </span>
                <div
                  id="kogito-consoles-tooltip-538f9feb-5a14-4096-b791-2055b38da7c69-0.123456789"
                />
              </strong>
            </a>
            <a
              aria-disabled="false"
              class="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id="OUIA-Generated-Button-link-3"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              href="http://localhost:4000"
              target="_blank"
            >
              Endpoint
              <svg
                aria-hidden="true"
                class="pf-u-ml-xs"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                />
              </svg>
            </a>
          </td>
          <td
            class=""
            data-key="2"
            data-label="Status"
            data-ouia-component-id="status"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id="OUIA-Generated-Button-link-4"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="error-state"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-u-mr-sm"
                fill="var(--pf-global--danger-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M409.5,319 C406.699326,316.168774 402.882413,314.575614 398.9,314.575614 C394.917587,314.575614 391.100674,316.168774 388.3,319 L319,388.3 C316.168774,391.100674 314.575614,394.917587 314.575614,398.9 C314.575614,402.882413 316.168774,406.699326 319,409.5 L421.5,512 L319,614.5 C316.168774,617.300674 314.575614,621.117587 314.575614,625.1 C314.575614,629.082413 316.168774,632.899326 319,635.7 L388.3,705 C391.100674,707.831226 394.917587,709.424386 398.9,709.424386 C402.882413,709.424386 406.699326,707.831226 409.5,705 L512,602.5 L614.5,705 C620.367618,710.877435 629.877455,710.922082 635.8,705.1 L705.1,635.8 C707.926508,632.970191 709.505822,629.128746 709.48721,625.129169 C709.468267,621.129592 707.852954,617.303145 705,614.5 L602.5,512 L705,409.5 C707.821142,406.720523 709.417879,402.93109 709.436648,398.97079 C709.455417,395.01049 707.89467,391.206092 705.1,388.4 L635.8,319 C629.932382,313.122565 620.422545,313.077918 614.5,318.9 L512,421.5 L409.5,319 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z"
                />
              </svg>
              Error
            </button>
          </td>
          <td
            class=""
            data-key="3"
            data-label="Created"
            data-ouia-component-id="created"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <time
              datetime="1571715644000"
            >
              8 months ago
            </time>
          </td>
          <td
            class=""
            data-key="4"
            data-label="Last update"
            data-ouia-component-id="last update"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <span>
               
              <svg
                aria-hidden="true"
                class="pf-u-mr-sm"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 255.531c.253 136.64-111.18 248.372-247.82 248.468-59.015.042-113.223-20.53-155.822-54.911-11.077-8.94-11.905-25.541-1.839-35.607l11.267-11.267c8.609-8.609 22.353-9.551 31.891-1.984C173.062 425.135 212.781 440 256 440c101.705 0 184-82.311 184-184 0-101.705-82.311-184-184-184-48.814 0-93.149 18.969-126.068 49.932l50.754 50.754c10.08 10.08 2.941 27.314-11.313 27.314H24c-8.837 0-16-7.163-16-16V38.627c0-14.254 17.234-21.393 27.314-11.314l49.372 49.372C129.209 34.136 189.552 8 256 8c136.81 0 247.747 110.78 248 247.531zm-180.912 78.784l9.823-12.63c8.138-10.463 6.253-25.542-4.21-33.679L288 256.349V152c0-13.255-10.745-24-24-24h-16c-13.255 0-24 10.745-24 24v135.651l65.409 50.874c10.463 8.137 25.541 6.253 33.679-4.21z"
                />
              </svg>
               Updated
               
              <time
                datetime="1571715644000"
              >
                8 months ago
              </time>
            </span>
          </td>
          <td
            class=""
            data-key="5"
            data-ouia-component-id="__actions"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <div
              aria-label="process instance actions dropdown"
              aria-labelledby="process instance actions dropdown"
              class="pf-c-dropdown pf-m-align-right"
              data-ouia-component-id="OUIA-Generated-Dropdown-2"
              data-ouia-component-type="PF4/Dropdown"
              data-ouia-safe="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Actions"
                class="pf-c-dropdown__toggle pf-m-plain"
                data-testid="kebab-toggle"
                id="kebab-toggle"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 192 512"
                  width="1em"
                >
                  <path
                    d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
        <tr
          class=""
          data-ouia-component-id="OUIA-Generated-TableRow-5"
          data-ouia-component-type="PF4/TableRow"
          data-ouia-safe="true"
        >
          <td
            class=""
            data-key="0"
            data-ouia-component-id="__select"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <div
              class="pf-c-check pf-m-standalone"
            >
              <input
                aria-invalid="false"
                aria-label="process-list-checkbox"
                class="pf-c-check__input"
                data-ouia-component-id="OUIA-Generated-Checkbox-3"
                data-ouia-component-type="PF4/Checkbox"
                data-ouia-safe="true"
                data-testid="checkbox-e4448857-fa0c-403b-ad69-f0a353458b9d"
                id="checkbox-e4448857-fa0c-403b-ad69-f0a353458b9d"
                name="checkbox-e4448857-fa0c-403b-ad69-f0a353458b9d"
                type="checkbox"
              />
            </div>
          </td>
          <td
            class=""
            data-key="1"
            data-label="Id"
            data-ouia-component-id="id"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <a
              class="kogito-process-list__link"
              data-ouia-component-type="process-description"
              data-ouia-safe="true"
            >
              <strong>
                <span>
                  travels
                   
                  <span
                    class="pf-c-badge pf-m-unread"
                  >
                    Tra234
                  </span>
                </span>
                <div
                  id="kogito-consoles-tooltip-e4448857-fa0c-403b-ad69-f0a353458b9d-0.123456789"
                />
              </strong>
            </a>
            <a
              aria-disabled="false"
              class="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id="OUIA-Generated-Button-link-5"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              href="http://localhost:4000"
              target="_blank"
            >
              Endpoint
              <svg
                aria-hidden="true"
                class="pf-u-ml-xs"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                />
              </svg>
            </a>
          </td>
          <td
            class=""
            data-key="2"
            data-label="Status"
            data-ouia-component-id="status"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <button
              aria-disabled="false"
              class="pf-c-button pf-m-link pf-m-inline"
              data-ouia-component-id="OUIA-Generated-Button-link-6"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="error-state"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="pf-u-mr-sm"
                fill="var(--pf-global--danger-color--100)"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 1024 1024"
                width="1em"
              >
                <path
                  d="M409.5,319 C406.699326,316.168774 402.882413,314.575614 398.9,314.575614 C394.917587,314.575614 391.100674,316.168774 388.3,319 L319,388.3 C316.168774,391.100674 314.575614,394.917587 314.575614,398.9 C314.575614,402.882413 316.168774,406.699326 319,409.5 L421.5,512 L319,614.5 C316.168774,617.300674 314.575614,621.117587 314.575614,625.1 C314.575614,629.082413 316.168774,632.899326 319,635.7 L388.3,705 C391.100674,707.831226 394.917587,709.424386 398.9,709.424386 C402.882413,709.424386 406.699326,707.831226 409.5,705 L512,602.5 L614.5,705 C620.367618,710.877435 629.877455,710.922082 635.8,705.1 L705.1,635.8 C707.926508,632.970191 709.505822,629.128746 709.48721,625.129169 C709.468267,621.129592 707.852954,617.303145 705,614.5 L602.5,512 L705,409.5 C707.821142,406.720523 709.417879,402.93109 709.436648,398.97079 C709.455417,395.01049 707.89467,391.206092 705.1,388.4 L635.8,319 C629.932382,313.122565 620.422545,313.077918 614.5,318.9 L512,421.5 L409.5,319 Z M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 Z M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 Z"
                />
              </svg>
              Error
            </button>
          </td>
          <td
            class=""
            data-key="3"
            data-label="Created"
            data-ouia-component-id="created"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <time
              datetime="1571715644000"
            >
              8 months ago
            </time>
          </td>
          <td
            class=""
            data-key="4"
            data-label="Last update"
            data-ouia-component-id="last update"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <span>
               
              <svg
                aria-hidden="true"
                class="pf-u-mr-sm"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 255.531c.253 136.64-111.18 248.372-247.82 248.468-59.015.042-113.223-20.53-155.822-54.911-11.077-8.94-11.905-25.541-1.839-35.607l11.267-11.267c8.609-8.609 22.353-9.551 31.891-1.984C173.062 425.135 212.781 440 256 440c101.705 0 184-82.311 184-184 0-101.705-82.311-184-184-184-48.814 0-93.149 18.969-126.068 49.932l50.754 50.754c10.08 10.08 2.941 27.314-11.313 27.314H24c-8.837 0-16-7.163-16-16V38.627c0-14.254 17.234-21.393 27.314-11.314l49.372 49.372C129.209 34.136 189.552 8 256 8c136.81 0 247.747 110.78 248 247.531zm-180.912 78.784l9.823-12.63c8.138-10.463 6.253-25.542-4.21-33.679L288 256.349V152c0-13.255-10.745-24-24-24h-16c-13.255 0-24 10.745-24 24v135.651l65.409 50.874c10.463 8.137 25.541 6.253 33.679-4.21z"
                />
              </svg>
               Updated
               
              <time
                datetime="1571715644000"
              >
                8 months ago
              </time>
            </span>
          </td>
          <td
            class=""
            data-key="5"
            data-ouia-component-id="__actions"
            data-ouia-component-type="process-list-cell"
            data-ouia-safe="true"
          >
            <div
              aria-label="process instance actions dropdown"
              aria-labelledby="process instance actions dropdown"
              class="pf-c-dropdown pf-m-align-right"
              data-ouia-component-id="OUIA-Generated-Dropdown-3"
              data-ouia-component-type="PF4/Dropdown"
              data-ouia-safe="true"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Actions"
                class="pf-c-dropdown__toggle pf-m-plain"
                data-testid="kebab-toggle"
                id="kebab-toggle"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 192 512"
                  width="1em"
                >
                  <path
                    d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                  />
                </svg>
              </button>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
